# customer-support-mas-ai

./: .env.dev.example  .env.example  .env.prod.example  .env.staging.example  .gitignore  GETTING_STARTED.md  Makefile  README.md  TESTING_SCENARIOS.md  pyproject.toml  pytest.ini  requirements.txt
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
cloudbuild/: cloudbuild-deploy.yaml  cloudbuild-nightly.yaml  cloudbuild.yaml  pr-checks.yaml  release.yaml  terraform-apply.yaml  terraform-plan.yaml
customer_support_agent/: __init__.py  agent.py  auth.py  config.py  main.py  test_billing_agent.py  test_order_agent.py  test_product_agent.py  test_refund_eligibility.py  test_root_agent.py
deployment/: deploy-cloudrun.sh  deploy.py  deploy_two_stage.py  manage_agent.py
docs/: ARCHITECTURE.md  CI_CD.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPER_WORKFLOW.md  ENV_SETUP.md  EVALUATION.md  EVAL_ARCHITECTURE.md  EVAL_STRATEGY.md  GETTING_STARTED.md  LOCAL_TESTING_GUIDE.md  PREREQUISITES.md  PYTHON_SETUP.md
online_evaluation/: README.md  run_agent_evaluation.py  run_sequential_eval.sh  run_single_eval.py
refs/: day-3a-agent-sessions.ipynb
scripts/: README.md  add_embeddings.py  create_model_armor_template.py  create_vector_index.py  eval_vertex.py  generate_eval_dataset.py  generate_integration_evalset.py  setup-cloud-build.sh  setup_firestore.sh  setup_gcp.sh  setup_model_armor.sh  test_model_armor.py
terraform/: apis.tf  cicd.tf  iam.tf  infrastructure.tf  main.tf  model_armor.tf  outputs.tf  secrets.tf  terraform.tfvars.example  (+1 more)
(+105 files in other folders)
